@@ -194,7 +194,7 @@ class UserDbStorageTest {
 
         List<User> friends = userDbStorage.getAllFriends(user1.getId());
         assertEquals(1, friends.size());
-        assertEquals(user2.getId(), friends.get(0).getId());
+        assertEquals(user2.getId(), friends.getFirst().getId());
     }
 
     @Test
@@ -210,8 +210,8 @@ class UserDbStorageTest {
 
         assertEquals(1, friends1.size());
         assertEquals(1, friends2.size());
-        assertEquals(user2.getId(), friends1.get(0).getId());
-        assertEquals(user1.getId(), friends2.get(0).getId());
+        assertEquals(user2.getId(), friends1.getFirst().getId());
+        assertEquals(user1.getId(), friends2.getFirst().getId());
     }
 
     @Test
@@ -274,7 +274,7 @@ class UserDbStorageTest {
         List<User> commonFriends = userDbStorage.getCommonFriends(user1.getId(), user2.getId());
 
         assertEquals(1, commonFriends.size());
-        assertEquals(user3.getId(), commonFriends.get(0).getId());
+        assertEquals(user3.getId(), commonFriends.getFirst().getId());
     }
 
     @Test
